add swagger documentation for projects
