# controllers/project-control.js
@@ -26,10 +26,17 @@ const getAll = async (req, res, next) => {
       userId,
       req.query,
     )
-    return res.status(HttpCode.OK).json({
-      status: 'success',
-      code: HttpCode.OK,
-      data: { total, limit, page, projects },
+    if (projects) {
+      return res.status(HttpCode.OK).json({
+        status: 'success',
+        code: HttpCode.OK,
+        data: { total, limit, page, projects },
+      })
+    }
+    return res.status(HttpCode.NOT_FOUND).json({
+        status: 'error',
+        code: HttpCode.NOT_FOUND,
+        message: 'Not Found',
     })
   } catch (error) {
     next(error)
